# assay

./: .env.example  .gitignore  README.md  ROADMAP.md  _config.yml  pyproject.toml
.github/workflows/: tests.yml
_includes/: head-custom.html
_layouts/: default.html
docs/: ARTIFACTS.md  CONTROLS.md  DATA_FLOW.md  ESCALATION.md  EVAL.md  OBSERVABILITY.md  README.md  RUNBOOK.md  STAKEHOLDERS.md  VALIDATION.md
examples/: change_approval_demo.py  change_approval_llm_demo.py  eval_demo.py  personal_trade_demo.py  quickstart.py  review_queue_demo.py
examples/sample_run/: README.md
examples/sample_run/blocked/: audit.jsonl
examples/sample_run/blocked/artifacts/: llm_mapping.json
examples/sample_run/clean/: audit.jsonl
examples/sample_run/clean/artifacts/: approval_request.json  llm_mapping.json  workpaper.json
src/assay/: __init__.py  eval.py  faithfulness.py  gate.py  graders.py  grounding.py  llm.py  review.py
src/assay/apps/: __init__.py
src/assay/apps/change_approval/: __init__.py  app.py  controls.py  gold.py
src/assay/apps/personal_trade/: __init__.py  app.py  data.py
src/assay/plane/: __init__.py  audit.py  core.py
tests/: test_change_approval.py  test_change_approval_llm.py  test_eval.py  test_faithfulness.py  test_gate.py  test_grounding.py  test_personal_trade.py  test_plane.py  test_review.py
